--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -37,3 +37,18 @@
 		color: rgba($black, 0.8);
 	}
 }
+
+.selects {
+    width: 100%;
+    margin-top: 1.1em;
+    display: flex;
+    justify-content: space-between;
+}
+
+.select {
+    flex: 1 1 0;
+    font-size: 1.125em;
+    &:first-child {
+        margin-right: 1em;
+    }
+}
