--- a/src/components/BottomWrapper/BottomWrapper.module.scss
+++ b/src/components/BottomWrapper/BottomWrapper.module.scss
@@ -18,3 +18,10 @@
     font-family: $title-font;
     text-align: center;
 }
+
+.titleSkeleton {
+    margin: 0 auto;
+    max-width: 9em;
+    width: 100%;
+    height: 2em;
+}
