--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,48 +1,50 @@
 @import "../../styles/vars";
 
 .header {
-    width: 100%;
-    height: 4em;
-    padding: 0 3.75em;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fff;
-    border-radius: 0 0 1em 1em;
+	width: 100%;
+	height: 4em;
+	padding: 0 3.75em;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: #fff;
+	border-radius: 0 0 1em 1em;
 }
 
 .nav {
-    user-select: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+	user-select: none;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
-.link {
-    font-weight: 700;
-    position: relative;
-    padding-left: 1.5em;
-    transition: opacity 0.2s;
-    cursor: pointer;
-    display: block;
-    &:hover {
-        opacity: 0.8;
-    }
-    &:active {
-        opacity: 0.65;
-    }
-    &:not(:first-child) {
-        margin-left: 1.8em;
-    }
-    span {
-        position: absolute;
-        left: 0;
-        top: 50%;
-        transform: translateY(-50%);
-        font-size: 1.3em;
-    }
+.link,
+.logout {
+	font-weight: 700;
+	position: relative;
+	padding-left: 1.5em;
+	transition: opacity 0.2s;
+	cursor: pointer;
+	display: block;
+	&:hover {
+		opacity: 0.8;
+	}
+	&:active {
+		opacity: 0.65;
+	}
+	span {
+		position: absolute;
+		left: 0;
+		top: 50%;
+		transform: translateY(-50%);
+		font-size: 1.3em;
+	}
+}
+
+.link:not(:first-child) {
+	margin-left: 1.8em;
 }
 
 .active {
-    color: $green;
+	color: $green;
 }
