--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -18,19 +18,20 @@
 	align-items: center;
 }
 
-.link,
-.logout {
+.link {
 	font-weight: 700;
 	position: relative;
 	padding-left: 1.5em;
 	transition: opacity 0.2s;
 	cursor: pointer;
-	display: block;
 	&:hover {
 		opacity: 0.8;
 	}
 	&:active {
 		opacity: 0.65;
+	}
+	&:not(:first-child) {
+		margin-left: 1.8em;
 	}
 	span {
 		position: absolute;
@@ -41,10 +42,27 @@
 	}
 }
 
-.link:not(:first-child) {
-	margin-left: 1.8em;
-}
-
 .active {
 	color: $green;
+}
+
+.user {
+    position: relative; 
+}
+
+.profileBtn {
+    border-radius: 50%;
+}
+
+.userAvatar {
+    border-radius: 50%;
+    background-color: rgba($black, 0.5);
+    width: 1.8em;
+    height: 1.8em;
+    font-size: 1.2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    color: #fff;
 }
