--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/vars";
+@import "../../styles/mixins";
 
 .header {
 	width: 100%;
@@ -24,6 +25,7 @@
 	padding-left: 1.5em;
 	transition: opacity 0.2s;
 	cursor: pointer;
+	@include focus-shadow;
 	&:hover {
 		opacity: 0.8;
 	}
@@ -52,6 +54,7 @@
 
 .profileBtn {
     border-radius: 50%;
+	@include focus-shadow;
 }
 
 .userAvatar {
