--- a/src/components/InputField/InputField.module.scss
+++ b/src/components/InputField/InputField.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/vars";
+@import "../../styles/mixins";
 
 .field {
     p {
@@ -16,6 +17,7 @@
     width: 100%;
     padding: 0.5em 1em;
     transition: opacity 0.2s;
+    @include focus-shadow;
     &::placeholder {
         color: $gray;
     }
