--- a/src/components/MealCard/MealCard.module.scss
+++ b/src/components/MealCard/MealCard.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/vars";
+@import "../../styles/mixins";
 
 .card {
 	max-width: 12.5em;
@@ -37,6 +38,7 @@
 	display: -webkit-box;
 	-webkit-line-clamp: 3;
 	-webkit-box-orient: vertical;
+	@include focus-shadow;
 	&:hover {
 		opacity: 0.8;
 	}
