--- a/src/components/MealInfo/MealInfo.module.scss
+++ b/src/components/MealInfo/MealInfo.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/vars";
+@import "../../styles/mixins";
 
 .imageContainer {
 	width: 100%;
@@ -18,6 +19,7 @@
 	align-items: center;
 	transition: transform 0.2s;
 	box-shadow: $shadow;
+	@include focus-shadow;
 	span {
 		font-size: 1.4em;
 		transition: 0.2s;
