--- a/src/components/ShoppingListItem/ShoppingListItem.module.scss
+++ b/src/components/ShoppingListItem/ShoppingListItem.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/vars";
+@import "../../styles/mixins";
 
 .li {
 	padding: 0.6em 0.8em;
@@ -33,6 +34,7 @@
 	opacity: 0.3;
 	transition: opacity 0.2s;
 	border-radius: 0.4em;
+	@include focus-shadow($color: red);
 	&:hover {
 		opacity: 0.3;
 		color: red;
