--- a/src/components/TopWrapperForm/TopWrapperForm.module.scss
+++ b/src/components/TopWrapperForm/TopWrapperForm.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/vars";
+@import "../../styles/mixins";
 
 .form {
 	margin-top: 2.2em;
@@ -13,6 +14,7 @@
 	width: 100%;
 	padding: 0.5em 0.4em 0.5em 1em;
 	border-radius: 1em 0 0 1em;
+	@include focus-shadow;
 	&::placeholder {
 		color: $gray;
 	}
@@ -24,6 +26,7 @@
 	justify-content: center;
 	align-items: center;
 	cursor: auto;
+	@include focus-shadow;
 	span {
 		font-size: 1em;
 		color: rgba($black, 0.4);
@@ -45,6 +48,7 @@
 	align-items: center;
 	border-radius: 0 1em 1em 0;
 	position: relative;
+	@include focus-shadow;
 	span {
 		font-size: 1.3em;
 		color: rgba($black, 0.4);
