--- a/src/components/UserProfile/UserProfile.module.scss
+++ b/src/components/UserProfile/UserProfile.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/vars";
+@import "../../styles/mixins";
 
 .profile {
     position: absolute;
@@ -60,6 +61,7 @@
     margin-top: 2em;
     transition: opacity 0.2s;
     cursor: pointer;
+    @include focus-shadow;
     &:hover {
         opacity: 0.8;
     }
