--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -6,6 +6,8 @@
 	color: inherit;
 	font-weight: inherit;
 	font-family: inherit;
+	outline: none;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 html,
