--- a/src/components/MealInfo/MealInfo.module.scss
+++ b/src/components/MealInfo/MealInfo.module.scss
@@ -3,8 +3,16 @@
 
 .imageContainer {
 	width: 100%;
-	height: 16em;
+	min-width: 19em;
+	height: 0;
 	position: relative;
+	padding-top: calc(4 / 3 * 50%);
+	@include media($max: "md") {
+		min-width: 0;
+		max-width: 32em;
+		margin: 0 auto;
+		padding-top: calc(4 / 3 * 40%);
+	}
 }
 
 .bookmark {
@@ -97,6 +105,10 @@
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
+	@include media($max: "md") {
+		max-width: 25em;
+		margin: 1em auto 0 auto;
+	}
 }
 
 .tag {
