--- a/src/components/MealIngredients/MealIngredients.module.scss
+++ b/src/components/MealIngredients/MealIngredients.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/vars";
+@import "../../styles/mixins";
 
 .ul {
 	margin-top: 1.2em;
@@ -20,4 +21,8 @@
 .button {
 	font-size: 0.95em;
 	margin-top: 1.875em;
+	@include media($max: "md") {
+		display: block;
+		margin: 1.875em auto 0 auto;
+	}
 }
