--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,16 +1,27 @@
 @import "../../styles/vars";
+@import "../../styles/mixins";
 
 .selects {
     width: 100%;
     margin-top: 1.1em;
     display: flex;
     justify-content: space-between;
+    @include media($max: "xs") {
+        margin-top: 0.7em;
+        flex-direction: column;
+    }
 }
 
 .select {
     flex: 1 1 0;
     font-size: 1.125em;
     &:first-child {
-        margin-right: 1em;
+        margin-bottom: 0.7em;
+    }
+    @include media("xs") {
+        &:first-child {
+            margin-bottom: 0;
+            margin-right: 1em;
+        }
     }
 }
