--- a/src/pages/AuthPage/AuthPage.module.scss
+++ b/src/pages/AuthPage/AuthPage.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/vars";
+@import "../../styles/mixins";
 
 .wrapper {
     margin: 3.75em auto;
@@ -10,6 +11,9 @@
     align-items: center;
     max-width: 23em;
     width: 100%;
+    @include media($max: 360px) {
+        padding: 1.875em 1em 1.875em 1em;
+    }
 }
 
 .title {
@@ -67,6 +71,7 @@
     cursor: pointer;
     user-select: none;
     transition: opacity 0.2s;
+    @include focus-shadow(#4285F4);
     &:hover {
         opacity: 0.8;
     }
@@ -97,6 +102,7 @@
         text-transform: uppercase;
         text-decoration: underline;
         transition: opacity 0.2s;
+        @include focus-shadow;
         &:hover {
             opacity: 0.8;
         }
